monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4090/A4090i.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4090;

grammar A4090i {

  A = "a";
  C = "c";
  B = who:A who:C who:A;

}
